# auto-release-notes

./: .gitignore  .secrets  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  run.py  test.py
.github/workflows/: auto_release_notes.yaml  auto_release_notes.yml  release_notes.yml
changes/auto-release-notes_extractor.py/: after  before
src/auto_release_notes/: __init__.py  __main__.py  auto_release_notes.py  gen_notes.py  litellm.py  prompt.txt
