[build-system]
requires = [
    "hatchling>=1.27.0",  # Modern build backend that works well with uv
    "hatch-vcs>=0.4.0"    # For versioning with setuptools-scm
]
build-backend = "hatchling.build"

[project]
name = "auto-release-notes"
description = "Auto Release Notes"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["Auto", "Release", "Notes"]
authors = [
    {name = "Lennard Korte"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "litellm>=1.65.1"
]


dynamic = ["version"]

[tool.hatch.build.targets.wheel]
packages = ["src/auto_release_notes"]

[tool.hatch.build.targets.sdist]
include = [
    "src/auto_release_notes/**/*.py",
]

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "post-release" }

[project.urls]
Home = "https://lennardkorte.com"

[project.scripts]
auto-release-notes = "auto_release_notes.__main__:main"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100  # Increased from 88 to accommodate GraphQL queries
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
select = ["E", "F", "I"]
ignore = [
    "F405",  # Ignore undefined star imports
    "E501",  # Ignore line length for GraphQL queries
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["auto_release_notes"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
